--- a/src/config/entnet_webq.yml
+++ b/src/config/entnet_webq.yml
@@ -1,19 +1,19 @@
-# Seed 15 Data
-name: 'webq_seed_15_plus'
-data_dir: '../data/WebQ_entclf_delex_seed_15_fullvocab_plus/'
-train_data: 'train_seed_15_ent_vec.json'
-valid_data: 'valid_seed_15_ent_vec.json'
-test_data: 'test_seed_2_ent_vec_smart.json'
+# WebQuestions Data
+name: 'WebQuestions'
+data_dir: '../data/WebQ/'
+train_data: 'train_ent_vec.json'
+valid_data: 'valid_ent_vec.json'
+test_data: 'test_ent_vec.json'
 
 # Full vocab
 vocab_size: 100797
 num_ent_types: 1712
 num_relations: 4996
-pre_word2vec: '../data/WebQ_entclf_delex_seed_15_fullvocab_plus/glove_pretrained_300d_w2v.npy'
+pre_word2vec: '../data/WebQ/glove_pretrained_300d_w2v.npy'
 
 
 # Output
-model_file: '../runs/WebQ_entclf/best/entnet_seed_15_simpleatt_0.898.md.final'
+model_file: '../runs/WebQ/entnet.md'
 
 
 # Model
